# arlanohist

./: .gitignore  .indent.pro  ChangeLog  ChangeLog.1999  ChangeLog.2003  ChangeLog.2004  ChangeLog.2005  ChangeLog.2006  ChangeLog.2007  HACKING  INSTALL  LIESMICH  Makefile.am  NEWS  README  TODO  configure.in  make-release  make-release.el
appl/: Makefile.am
appl/afstool/: Makefile.am  at_fs_flush_cps.c  at_fs_gettime.c
appl/afsutils/: Makefile.am  tokens.c  unlog.c
appl/amon/: Makefile.am  amon.c
appl/bos/: Makefile.am
appl/fs/: Makefile.am  fs.c  fs_arladebug.c  fs_local.h  fs_nnpfsdebug.c  fs_statistics.c
appl/kalog/: Makefile.am
appl/lib/: Makefile.am  appl_locl.h  arlalib.c  arlalib.h  tokens.c
appl/mac/: Makefile.am  make-mac-package.sh.in
appl/mac/Arla_Configuration/: Controller.m  DataSource.h  DataSource.m  Makefile.in
appl/mac/arlacmm/: Info.plist  Makefile.in  README  adduserwin.c  arlacmm.h  infowin.c  main.c  permwin.c  pioctl.c  util.c
appl/mac/arlacmm/dialog.nib/: info.nib  objects.xib
appl/mac/install/: Arla  Info.plist.in  StartupParameters.plist
appl/mac/install/Resources/: Description.plist  postflight.in
appl/mac/install/Resources/English.lproj/: Welcome.rtf
appl/mac/install/Resources/Swedish.lproj/: Welcome.rtf
appl/mac/mafslog/: Info.plist  Makefile.in  mafslog.h  mafslog.m  main.m
appl/mac/mafslog/English.lproj/: InfoPlist.strings
appl/mac/mafslog/English.lproj/MainMenu.nib/: classes.nib  info.nib  objects.nib
appl/mac/mafslog/mafslog.pbproj/: project.pbxproj
appl/perf/: Makefile.am  afsfsperf.c
appl/pts/: Makefile.am
appl/rxgklog/: Makefile.am  rxgklog.c
appl/vos/: Makefile.am  vos_addsite.c  vos_backup.c  vos_common.c  vos_lock.c  vos_remsite.c  vos_status.c  vos_unlock.c
arlad/: .gdbinit  Makefile.in  abuf.c  abuf.h  adir.c  adir.h  afsdir_check.c  aix-subr.c  arla-cli.8  arla-cli.c  arla-fuse.c  arla.c  arla.conf.5  arla_local.h  arlad.8  arlad.c  arladeb.c  arladeb.h  arladebu.c  blocks.c  blocks.h  bsd-subr.c  cmcb.c  cmcb.h  conn.c  conn.h  cred.c  cred.h  d-trans.c  disco.c  disco.h  dump_state.c  dynroot.c  dynroot.h  fcache.c  fcache.h  fprio.c  fprio.h  hpux-subr.c  inter.c  (+25 more)
cf/: Makefile.am.common  __extentions__.m4  aix.m4  broken-getaddrinfo.m4  broken-getnameinfo.m4  broken-glob.m4  broken-realloc.m4  broken-snprintf.m4  broken.m4  broken2.m4  bsd-insmntque.m4  bsd-vfs-quotactl.m4  bsd-vnode-create-vobject.m4  bsd-vop-open.m4  bsd-vop-unlock.m4  c-function.m4  check-compile-et.m4  check-declaration.m4  check-getpwnam_r-posix.m4  check-kafs.m4  check-kerberos.m4  check-kerberos2.m4  check-kernel.m4  check-netinet-ip-and-tcp.m4  check-roken.m4  check-type-extra.m4  check-var.m4  check-x.m4  crypto.m4  db.m4  destdirs.m4  find-func-no-libs2.m4  func-hstrerror-const.m4  func-krb-get-default-principal.m4  func-krb-get-default-tkt-root.m4  func-krb-get-err-text.m4  func-krb-kdctimeofday.m4  func-ntohl.m4  grok-type.m4  have-def.m4  (+27 more)
conf/: Makefile.in  arla.conf.in  arla.spec.in
conf/freebsd/: freebsd4-rc.arla
doc/: MAKE-ARLA-RELEASE.txt  Makefile.in  ack.texi  ack.texi.in  afs-basics.texi  arla.info  arla.texi  authors.texi  caching-in-blocks  debugging.texi  index.texi  intro.texi  nnpfs.txt  oddities.texi  partsofarla.texi  pioctl.texi  porting.texi  prog-disco.texi  prog.texi  real-world.texi  servers.texi  storage.texi  timeline.texi  tools.texi
include/: Makefile.in  bits.c
include/netbsd-lkm/: Makefile  foo.c
lib/: Makefile.am
lib/bufdir/: Makefile.am  fbuf.h  fdir.c
lib/editline/: Makefile.in
lib/ko/: Makefile.am  kocell.c  restest.c
lib/roken/: Makefile.am  getdtablesize.c  mkinstalldirs  roken-common.h  roken.h.in  snprintf-test.h  strftime.c  strptime.c  tm2time.c
lib/sl/: Makefile.am  make_cmds.c
lib/vers/: Makefile.am  make-print-version.c
lwp/: Makefile.in  lwp_asm.c  lwp_asm.h  lwp_elf.h  make-process.o.sh.in  plwp.c  process.aix22.S  process.arm.S  process.hpux.S  process.i386.S  process.ibm032.S  process.m68k.S  process.mips.S  process.ppc.S  process.rios.S  process.sparc.S  process.vax.S  process.x86_64.S  testlwp.c
milko/: Makefile.in
milko/appl/: Makefile.in
milko/bos/: Makefile.in  bos_locl.h
milko/fs/: Makefile.in  fsrv_locl.h  volprocs.c
milko/lib/: Makefile.in
milko/pts/: Makefile.in  pr.c  ptserver.c
milko/vldb/: Makefile.in  vl_db.c  vldb_locl.h  vldbserver.c
nnpfs/: Makefile.in  readtrace.py
nnpfs/aix/: Makefile.in  foo.exp  nnpfs.exp  nnpfs_common.c  nnpfs_deb.c  nnpfs_dev.c  nnpfs_load.c  nnpfs_message.c  nnpfs_node.c  nnpfs_query.c  nnpfs_syscalls.c  nnpfs_unload.c  nnpfs_vfsops.c  nnpfs_vnodeops.c  nnpfs_wrap.c
nnpfs/bsd/: Info.plist.in  Makefile.in  README  nnpfs_blocks.c  nnpfs_common-bsd.c  nnpfs_common.c  nnpfs_deb.c  nnpfs_dev-bsd.c  nnpfs_dev-common.c  nnpfs_dev-freebsd.c  nnpfs_dev-macos.c  nnpfs_dev-netbsd.c  nnpfs_dev-openbsd.c  (+20 more)
nnpfs/dummer/: Makefile.am  dummer.c  dummer.h  nnpfs_blocks.c  nnpfs_message.c  nnpfs_node.c  testcases.pl
rx/: .cvsignore  Makefile.am  rx.c  rx_event.c  rxdebug.c  rxperf.c
rxdef/: Makefile.am
rxgk/: Makefile.am  README  rxgk-settoken.c  rxgk_hcrypto.c  rxgk_hcrypto.h  rxgk_locl.h  rxgk_serv.c
rxkad/: Makefile.am  decomp_ticket.c  rxk_crpt.c  rxk_locl.c  rxk_serv.c  rxkad_locl.h
scripts/: arla-release.sh  build-arla.sh  extract-result.sh  linux.gdb  mingwin.sh  run-tests.sh
tests/: Makefile.in  append-over-page.c  apwd.c  asu.c  blocks-new-file.c  boot-strap-arla  build-and-run-rcs  build-emacs  build-emacs-j  build-gdb  check-sysname  copy-and-diff-gnu-mirror  copy-file  copy-file-4G  copy-file2  create-dirs.c  create-files.c  create-remove-dirs  create-remove-files  create-remove.c  create-stat.c  create-symlinks.c  deep-tree  dir-size-mismatch  discon-tar1  discon-tar2  distributed1  dup2-and-unlog.c  exit-wo-close.c  fchmod.c  fhbench.c  find-and-cat-openbsd  find-linux  ga-test.c  generic-build  genrandom.c  getdents-and-unlink1  getdents-and-unlink2  getdents-and-unlink3  grind-arla-with-cvs  (+72 more)
tools/: Makefile.in
util/: Makefile.am
ydr/: Makefile.am  output.c
(+166 files in other folders)
